--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_DB: library
-      POSTGRES_USER: mylibraby
+      POSTGRES_USER: mylibrary
       POSTGRES_PASSWORD: mylibrary
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - db-data:/var/lib/postgresql/data
 
